@@ -6,9 +6,7 @@ import com.github.zabbum.oelrlib.game.BaseGame;
 import com.github.zabbum.oelrlib.game.GameStatus;
 import com.github.zabbum.oelrlib.plants.industries.AbstractIndustry;
 import com.github.zabbum.oelrlib.plants.oilfield.Oilfield;
-import com.github.zabbum.oelrlib.requests.BuyIndustryRequest;
-import com.github.zabbum.oelrlib.requests.BuyOilfieldRequest;
-import com.github.zabbum.oelrlib.requests.OelRequest;
+import com.github.zabbum.oelrlib.requests.*;
 import com.googlecode.lanterna.TerminalSize;
 import com.googlecode.lanterna.TextColor;
 import com.googlecode.lanterna.graphics.SimpleTheme;
@@ -70,6 +68,7 @@ public class Game {
     private final Display display = new Display();
     private Map<String, String> langMap;
     private OelRequest oelRequest;
+    private boolean devMode;
 
     public Game(String[] args) throws IOException, FontFormatException {
         this.argsMap = CliArgumentsParser.parseArguments(args);
@@ -80,6 +79,8 @@ public class Game {
     private void setUp() throws IOException, FontFormatException {
         // Create gameProperties
         gameProperties = new GameProperties();
+
+        devMode = Objects.equals(argsMap.get("devmode"), "devmode");
 
         setLanguage();
         setFont();
@@ -189,14 +190,10 @@ public class Game {
         contentPanel = gameProperties.getContentPanel();
     }
 
-    // Sleep
-    public static void sleep(long time) throws InterruptedException {
-        Thread.sleep(time);
-    }
-
     public void start() throws InterruptedException {
         // Display oel logo
-        display.oelLogo();
+        if (!devMode)
+            display.oelLogo();
 
         // Prompt for should new game be created
         boolean shouldCreateNewGame = shouldCreateGameMenu();
@@ -209,18 +206,29 @@ public class Game {
 
         // Get game depending on whether should you create new one or join existing one
         if (shouldCreateNewGame) {
-            baseGame = requestsCreator.createGame(playerName, playerAmount);
+            oelRequest = StarterRequest.builder()
+                    .playerName(playerName)
+                    .playersAmount(playerAmount)
+                    .build();
+            baseGame = requestsCreator.oelRequest(oelRequest);
         } else {
             String gameId = promptGameId();
-            baseGame = requestsCreator.joinGame(playerName, gameId);
+            oelRequest = JoinRequest.builder()
+                    .gameId(gameId)
+                    .playerName(playerName)
+                    .build();
+            baseGame = requestsCreator.oelRequest(oelRequest);
         }
         playerId = baseGame.getPlayers().size() - 1;
 
-        // Waiting menu
-        waitingMenu();
+        do {
+            // Waiting menu
+            waitingMenu();
 
-        // Main menu
-        mainMenu();
+            // Main menu
+            mainMenu();
+        }
+        while (!baseGame.getGameStatus().equals(GameStatus.FINISHED));
 
         // TODO: Waiting and main menu loop
     }
@@ -319,6 +327,48 @@ public class Game {
                     log.info("Oilfield buy menu");
                     menuAction = display.buyOilfieldMenu();
                 }
+                case DRILLS -> {
+                    log.info("Drills buying menu");
+                    menuAction = display.buyProductsMenu(
+                            baseGame.getDrillsIndustries(),
+                            TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.YELLOW,
+                            TextColor.ANSI.BLUE, TextColor.ANSI.WHITE_BRIGHT,
+                            TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.CYAN,
+                            TextColor.ANSI.YELLOW,
+                            TextColor.ANSI.BLUE,
+                            langMap.get("drillsHereYouCanBuy"),
+                            langMap.get("drillsProductsAmountPrompt"),
+                            10
+                    );
+                }
+                case PUMPS -> {
+                    log.info("Pumps buying menu");
+                    menuAction = display.buyProductsMenu(
+                            baseGame.getPumpsIndustries(),
+                            TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.BLACK_BRIGHT,
+                            TextColor.ANSI.BLACK_BRIGHT, TextColor.ANSI.WHITE_BRIGHT,
+                            TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.CYAN,
+                            TextColor.ANSI.BLACK_BRIGHT,
+                            TextColor.ANSI.BLACK,
+                            langMap.get("pumpsHereYouCanBuy"),
+                            langMap.get("pumpsProductsAmountPrompt"),
+                            15
+                    );
+                }
+                case CARS -> {
+                    log.info("Cars buying menu");
+                    menuAction = display.buyProductsMenu(
+                            baseGame.getCarsIndustries(),
+                            TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.RED_BRIGHT,
+                            TextColor.ANSI.RED_BRIGHT, TextColor.ANSI.WHITE_BRIGHT,
+                            TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.CYAN,
+                            TextColor.ANSI.RED_BRIGHT,
+                            TextColor.ANSI.BLACK,
+                            langMap.get("carsHereYouCanBuy"),
+                            langMap.get("carsProductsAmountPrompt"),
+                            15
+                    );
+                }
                 default -> {
                     log.warn("Unhandled menuAction: {}", menuAction);
                 }
@@ -326,60 +376,17 @@ public class Game {
         }
         while (Objects.equals(menuAction, MenuResponse.MAIN_MENU));
 
-    }
-
-
-    // Finish game
-    public static void finishGame(GameProperties gameProperties, BaseGame game) throws InterruptedException {
-        // Prepare new graphical settings
-        Panel contentPanel = gameProperties.getContentPanel();
-        contentPanel.removeAllComponents();
-        contentPanel.setLayoutManager(new GridLayout(1));
-        gameProperties.getWindow().setTheme(
-                SimpleTheme.makeTheme(
-                        false,
-                        TextColor.ANSI.BLUE_BRIGHT,
-                        TextColor.ANSI.BLACK,
-                        TextColor.ANSI.BLACK,
-                        TextColor.ANSI.BLUE_BRIGHT,
-                        TextColor.ANSI.WHITE_BRIGHT,
-                        TextColor.ANSI.CYAN,
-                        TextColor.ANSI.BLACK));
-
-        contentPanel.addComponent(new Label(gameProperties.getLangMap().get("gameResult") + ":"));
-
-        contentPanel.addComponent(new EmptySpace());
-
-        // Create table for results
-        Table<String> resultsTable =
-                new Table<>(
-                        gameProperties.getLangMap().get("player").toUpperCase(),
-                        gameProperties.getLangMap().get("loan"),
-                        gameProperties.getLangMap().get("balance"));
-
-        // Add every player to table
-        for (Player player : game.getPlayers()) {
-            resultsTable
-                    .getTableModel()
-                    .addRow(
-                            player.getName(),
-                            String.valueOf(player.getDebt()),
-                            String.valueOf(player.getBalance()));
+        // If something went wrong, log error and return
+        if (!menuAction.equals(MenuResponse.SUCCESS)) {
+            log.error("Menu action code: {}", menuAction);
+            menuAction = MenuResponse.PASS;
+            oelRequest = PassRequest.builder()
+                    .gameId(baseGame.getGameId())
+                    .playerId(playerId)
+                    .build();
         }
 
-        contentPanel.addComponent(resultsTable);
-
-        contentPanel.addComponent(new EmptySpace());
-
-        contentPanel.addComponent(new Label(gameProperties.getLangMap().get("congratulationsToTheWinners")));
-
-        Confirm tmpConfirm = new Confirm();
-        Button confirmButton = Elements.confirmButton(tmpConfirm, gameProperties.getLangMap().get("done"));
-        contentPanel.addComponent(confirmButton);
-        confirmButton.takeFocus();
-
-        // Wait for confirmation
-        tmpConfirm.waitForConfirm();
+        baseGame = requestsCreator.oelRequest(oelRequest);
     }
 
     // Ask player whether they want to connect to a game or create one
@@ -389,12 +396,9 @@ public class Game {
         window.setTheme(
                 SimpleTheme.makeTheme(
                         false,
-                        TextColor.ANSI.BLUE_BRIGHT,
-                        TextColor.ANSI.RED,
-                        TextColor.ANSI.RED,
-                        TextColor.ANSI.BLUE_BRIGHT,
-                        TextColor.ANSI.WHITE_BRIGHT,
-                        TextColor.ANSI.CYAN,
+                        TextColor.ANSI.BLUE_BRIGHT, TextColor.ANSI.RED,
+                        TextColor.ANSI.RED, TextColor.ANSI.BLUE_BRIGHT,
+                        TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.CYAN,
                         TextColor.ANSI.RED));
 
         contentPanel.addComponent(new Label("CZY CHCESZ STWORZYC NOWA GRE?"));
@@ -665,6 +669,186 @@ public class Game {
             return MenuResponse.SUCCESS;
         }
 
+        public MenuResponse buyProductsMenu(
+                List<? extends AbstractIndustry> industries,
+                TextColor baseForeground, TextColor baseBackground,
+                TextColor editableForeground, TextColor editableBackground,
+                TextColor selectedForeground, TextColor selectedBackground,
+                TextColor guiBackground,
+                TextColor tableForeground,
+                String hereYouCanBuy, String productsAmountPrompt,
+                int maxAmount
+        ) throws InterruptedException {
+            contentPanel.removeAllComponents();
+            contentPanel.setLayoutManager(new GridLayout(1));
+            window.setTheme(SimpleTheme.makeTheme(
+                    false,
+                    baseForeground, baseBackground,
+                    editableForeground, editableBackground,
+                    selectedForeground, selectedBackground,
+                    guiBackground));
+
+            // Display title
+            Panel titlePanel = new Panel(new GridLayout(1));
+            titlePanel.setTheme(new SimpleTheme(baseBackground, baseForeground));
+            titlePanel.addComponent(new EmptySpace());
+            titlePanel.addComponent(new Label(hereYouCanBuy));
+            titlePanel.addComponent(
+                    new Label(
+                            langMap.get("balance2")
+                                    + ": "
+                                    + player.getBalance()
+                                    + "$"));
+            titlePanel.addComponent(new EmptySpace());
+            contentPanel.addComponent(titlePanel);
+
+            contentPanel.addComponent(new EmptySpace());
+
+            // Create table
+            Table<String> productsTable =
+                    new Table<>(
+                            "NR",
+                            langMap.get("industryName"),
+                            langMap.get("productsAmount"),
+                            langMap.get("price"));
+            productsTable.setTheme(
+                    SimpleTheme.makeTheme(
+                            false,
+                            tableForeground, baseBackground,
+                            editableForeground, editableBackground,
+                            selectedForeground, selectedBackground,
+                            guiBackground));
+
+            // Add every available industry to table
+            productsTable.getTableModel().addRow("0", "-", "-", "-");
+            for (int industryIndex = 0; industryIndex < industries.size(); industryIndex++) {
+                if (industries.get(industryIndex).isBought()
+                        && industries.get(industryIndex).getProductsAmount() != 0) {
+                    // If industry is bought and has products,
+                    // make it possible to buy it
+                    productsTable
+                            .getTableModel()
+                            .addRow(
+                                    String.valueOf(industryIndex + 1),
+                                    industries.get(industryIndex).getName(),
+                                    String.valueOf(industries.get(industryIndex).getProductsAmount()),
+                                    industries.get(industryIndex).getProductPrice() + "$");
+                }
+            }
+
+            Confirm tmpConfirm = new Confirm();
+            productsTable.setSelectAction(tmpConfirm::confirm);
+
+            // Display table
+            contentPanel.addComponent(productsTable);
+            productsTable.takeFocus();
+            contentPanel.addComponent(new EmptySpace());
+            contentPanel.addComponent(new Label(langMap.get("whereToBuy")));
+
+            // Wait for selection
+            tmpConfirm.waitForConfirm();
+            tmpConfirm = null;
+            int selectedIndustryIndex =
+                    Integer.parseInt(
+                            productsTable.getTableModel().getRow(productsTable.getSelectedRow()).get(0))
+                            - 1;
+
+            // If 0 selected, return
+            if (selectedIndustryIndex == -1) {
+                // Clean up
+                contentPanel.removeAllComponents();
+                return MenuResponse.MAIN_MENU;
+            }
+
+            // Prompt for product amount
+            contentPanel.addComponent(new Label(productsAmountPrompt));
+
+            // Prompt for product amount until provided value is valid
+            TextBox productAmountBox;
+            int selectedProductAmount = -1;
+            do {
+                // Prompt for product amount
+                contentPanel.addComponent(new EmptySpace());
+                productAmountBox = new TextBox(new TerminalSize(6, 1));
+                productAmountBox.setValidationPattern(Pattern.compile("[0-9]*"));
+                contentPanel.addComponent(productAmountBox);
+                tmpConfirm = new Confirm();
+                contentPanel.addComponent(Elements.confirmButton(tmpConfirm, langMap.get("done")));
+
+                // Wait for selection
+                productAmountBox.takeFocus();
+                tmpConfirm.waitForConfirm();
+
+                try {
+                    selectedProductAmount = Integer.parseInt(productAmountBox.getText());
+                } catch (NumberFormatException e) {
+                    // If a bad value has been provided
+                    selectedProductAmount = -1;
+                }
+            } while (selectedProductAmount < 0 || selectedProductAmount > maxAmount);
+
+            // Prompt for oilfield
+            contentPanel.addComponent(new EmptySpace());
+            contentPanel.addComponent(new Label(langMap.get("onWhatOilfield")));
+
+            // Display all the oilfields
+
+            // Create table
+            Table<String> oilfieldsTable =
+                    new Table<>(
+                            "NR", langMap.get("name"), langMap.get("property"));
+
+            // Add every available oilfield to table
+            List<Oilfield> oilfields = baseGame.getOilfields();
+            oilfieldsTable.getTableModel().addRow("0", "-", "-");
+            for (int oilfieldIndex = 0; oilfieldIndex < oilfields.size(); oilfieldIndex++) {
+                // If oilfield is bought, display the name
+                String ownerName = "---";
+                if (oilfields.get(oilfieldIndex).isBought()) {
+                    ownerName = oilfields.get(oilfieldIndex).getOwnership().getName();
+                }
+                oilfieldsTable
+                        .getTableModel()
+                        .addRow(
+                                String.valueOf(oilfieldIndex + 1),
+                                oilfields.get(oilfieldIndex).getName(),
+                                ownerName);
+            }
+
+            tmpConfirm = new Confirm();
+            oilfieldsTable.setSelectAction(tmpConfirm::confirm);
+
+            // Display table
+            contentPanel.addComponent(oilfieldsTable);
+            oilfieldsTable.takeFocus();
+
+            // Wait for selection
+            tmpConfirm.waitForConfirm();
+            int selectedOilfieldIndex =
+                    Integer.parseInt(
+                            oilfieldsTable.getTableModel().getRow(oilfieldsTable.getSelectedRow()).get(0))
+                            - 1;
+
+            // If 0 selected, return
+            if (selectedOilfieldIndex == -1) {
+                // Clean up
+                contentPanel.removeAllComponents();
+                return MenuResponse.MAIN_MENU;
+            }
+
+            // Build purchase request
+            oelRequest = BuyProductsRequest.builder()
+                    .gameId(baseGame.getGameId())
+                    .playerId(playerId)
+                    .industryClassName(industries.get(0).getClass().getName())
+                    .industryId(selectedIndustryIndex)
+                    .oilfieldId(selectedOilfieldIndex)
+                    .productAmount(selectedProductAmount)
+                    .build();
+
+            return MenuResponse.SUCCESS;
+        }
+
         public MenuResponse buyIndustryMenu(
                 List<? extends AbstractIndustry> industries,
                 TextColor baseForeground, TextColor baseBackground,
@@ -775,7 +959,7 @@ public class Game {
                     .gameId(baseGame.getGameId())
                     .industryId(selectedIndustryIndex)
                     .playerId(playerId)
-                    .industryClassName(industries.getFirst().getClass().getName())
+                    .industryClassName(industries.get(0).getClass().getName())
                     .productPrice(Integer.valueOf(productPriceBox.getText()))
                     .build();
 
@@ -990,12 +1174,9 @@ public class Game {
             window.setTheme(
                     SimpleTheme.makeTheme(
                             false,
-                            TextColor.ANSI.BLUE_BRIGHT,
-                            TextColor.ANSI.RED,
-                            TextColor.ANSI.RED,
-                            TextColor.ANSI.BLUE_BRIGHT,
-                            TextColor.ANSI.WHITE_BRIGHT,
-                            TextColor.ANSI.CYAN,
+                            TextColor.ANSI.BLUE_BRIGHT, TextColor.ANSI.RED,
+                            TextColor.ANSI.RED, TextColor.ANSI.BLUE_BRIGHT,
+                            TextColor.ANSI.WHITE_BRIGHT, TextColor.ANSI.CYAN,
                             TextColor.ANSI.RED));
 
             Game.timeBuffor();
@@ -1011,7 +1192,7 @@ public class Game {
                 contentPanel.addComponent(new Label("REMADE IN JAVA BY ZABBUM"));
             }
 
-            Game.sleep(5000);
+            Thread.sleep(5000);
 
             // Clean up
             contentPanel.removeAllComponents();
@@ -1019,7 +1200,7 @@ public class Game {
             // Display game motto
             contentPanel.addComponent(new Label("THE BIG GAME AND BIG MONEY."));
 
-            Game.sleep(3000);
+            Thread.sleep(3000);
 
             // Clean up
             contentPanel.removeAllComponents();
